--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 						</ul> -->
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="blog.html">About</a>
 						<!-- <ul class="secondary">
 							<li>
 								<a href="singlepost.html">Single post</a>
@@ -49,7 +49,7 @@
 					<h2>Founders</h2>
 					<img src="images/IMG20200723221838.jpg" alt="" class="teampic"><p>Mayank Patidar - Pursuing Bio Technology Engineering</p>
 					<img src="images/Jyoti_Chouhan.jpeg" alt="" class="teampic"><p>Jyoti Chauhan - Pursuing Mining Engineering</p>
-					<p><br>Mayank Patidar and Jyoti Chauhan are final year students of IIT Kharagpur who started this organisation in 2020 with the aim to maintain continuity among college students who are passionate and ambitious about learning.</p>
+					<p><br>Mayank Patidar and Jyoti Chauhan are pre-final year students of IIT Kharagpur who started this organisation in 2020 with the aim to maintain continuity among college students who are passionate and ambitious about learning.</p>
 				</div>
 			</div>
 			<div class="body">
