--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>blog - Space Science Website Template</title>
+	<title>About Us</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -30,7 +30,7 @@
 						<!-- </ul> -->
 					</li>
 					<li class="menu selected">
-						<a href="blog.html">Blog</a>
+						<a href="blog.html">About</a>
 						<!-- <ul class="secondary"> -->
 							<!-- <li> -->
 								<!-- <a href="singlepost.html">Single post</a> -->
@@ -46,11 +46,11 @@
 		<div id="body">
 			<div class="header">
 				<div>
-					<!-- <h1>Blog</h1>
+					<h1>About Us</h1>
 					<div class="article">
-						<ul>
+						<!-- <ul>
 							<li>
-								<a href="singlepost.html"><img src="images/astronaut.jpg" alt=""></a>
+								<a href="singlepost.html"><img src="images/rev.jpg" alt=""></a>
 								<h1>SUCCESFUL REPAIR OF THE MX-1 SAT</h1>
 								<span>FEBRUARY 6, 2023</span>
 								<p>This website template has been designed by Free Website Templates for you, for free. You can replace all this text with your own text.</p>
@@ -63,33 +63,44 @@
 								<p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us.</p>
 								<a href="singlepost.html" class="more">Read More</a>
 							</li>
-						</ul>
+						</ul> -->
+						Learn To Thrive (LTT) is an online learning platform started by two students of IIT Kharagpur. 
+Now we are having a team of more than 6 IITians from different IITs who are experts in their work. <br><br>
+ We conduct online workshops on C++ (From Basic to Advanced), Data Structure & Algorithm (DSA - for beginners), Interview preparation to crack the Coding round (Based on DSA question practice). <br><br> Our team is also working on launching python, Machine Learning and Data Science Workshops. Our aim is to maintain continuity among college students who are passionate and ambitious about learning.
+
 					</div>
 					<div class="sidebar">
 						<ul>
 							<li>
-								<h1>FEATURED POSTS</h1>
-								<a href="singlepost.html"><img src="images/moon-satellite.jpg" alt=""></a>
+								<!-- <h1>FEATURED POSTS</h1> -->
+								<!-- <a href="singlepost.html"><img src="images/moon-satellite.jpg" alt=""></a>
 								<h2>SOYUZ TMA-M</h2>
-								<span>FEBRUARY 6, 2023</span>
+								<span>FEBRUARY 6, 2023</span> -->
+								<div class="pod">
+								<video width="340" height="240" controls>
+						<source src="images/1.mp4" type="video/mp4">
+						<source src="images/1.ogg" type="video/ogg">
+					  Your browser does not support the video tag.
+					</video>
+					</div>
 							</li>
 							<li>
-								<h1>RECENT POSTS</h1>
+								<h1>Follow US</h1>
 								<ul>
 									<li>
-										<a href="singlepost.html"><img src="images/alien-life.jpg" alt=""></a>
-										<h2>ALIEN LIFE</h2>
-										<span>FEBRUARY 3, 2023</span>
+										<a href="https://www.facebook.com/Learn-To-Thrive-LTT-100474125564661/"><img src="images/fb2.jpg" alt="" width="60px" height="60px"></a>
+										<h2>Facebook</h2>
+										<!-- <span>FEBRUARY 3, 2023</span> -->
 									</li>
 									<li>
-										<a href="singlepost.html"><img src="images/galaxy.jpg" alt=""></a>
-										<h2>THE GALAXY</h2>
-										<span>FEBRUARY 1, 2023</span>
+										<a href="https://www.youtube.com/channel/UC7nIM4MiMk-gtDyJCIPDYPg"><img src="images/yt.jpg" alt="" height="42px"></a>
+										<h2>YouTube</h2>
+										<!-- <span>FEBRUARY 1, 2023</span> -->
 									</li>
 								</ul>
 							</li>
 						</ul>
-					</div> -->
+					</div>
 				</div>
 			</div>
 		</div>
