--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>contact - Space Science Website Template</title>
+	<title>Contact Us</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -30,7 +30,7 @@
 						<!-- </ul> -->
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="blog.html">About</a>
 						<!-- <ul class="secondary">
 							<li>
 								<a href="singlepost.html">Single post</a>
@@ -45,16 +45,59 @@
 		</div>
 		<div id="body">
 			<div class="header">
-				<div class="contact">
-					<h1>Contact</h1>
-					<h2>DO NOT HESITATE TO CONTACT US</h2>
-					<form action="index.html">
-						<input type="text" name="Name" value="Name" onblur="this.value=!this.value?'Name':this.value;" onfocus="this.select()" onclick="this.value='';">
-						<input type="text" name="Email Address" value="Email Address" onblur="this.value=!this.value?'Email Address':this.value;" onfocus="this.select()" onclick="this.value='';">
-						<input type="text" name="Subject" value="Subject" onblur="this.value=!this.value?'Subject':this.value;" onfocus="this.select()" onclick="this.value='';">
-						<textarea name="message" cols="50" rows="7">Message</textarea>
-						<input type="submit" value="Send" id="submit">
-					</form>
+				<div>
+					<h1>Contact Us</h1>
+					<div class="article">
+						<!-- <ul>
+							<li>
+								<a href="singlepost.html"><img src="images/rev.jpg" alt=""></a>
+								<h1>SUCCESFUL REPAIR OF THE MX-1 SAT</h1>
+								<span>FEBRUARY 6, 2023</span>
+								<p>This website template has been designed by Free Website Templates for you, for free. You can replace all this text with your own text.</p>
+								<a href="singlepost.html" class="more">Read More</a>
+							</li>
+							<li>
+								<a href="singlepost.html"><img src="images/satellite-dish.jpg" alt=""></a>
+								<h1>ALIEN SIGNAL DISCOVERY</h1>
+								<span>FEBRUARY 3, 2023</span>
+								<p>You can remove any link to our website from this website template, you're free to use this website template without linking back to us.</p>
+								<a href="singlepost.html" class="more">Read More</a>
+							</li>
+						</ul> -->
+						You can contact us by joining our WhatsApp group or Telegram group. We post about our upcoming workshops and other opportunities along with quite interesting papers related to coding on our groups. <br><br> If you want to reach out to us you can either contact any of the admin in these groups or mail to us at <a href="mailto:learntothriveltt@gmail.com">learntothriveltt@gmail.com</a>. <br><br> Workshops are completely designed to focus on quality contained, proper mentorship & guidance to each student that is why we are always having a limited number of seats.
+					</div>
+					<div class="sidebar">
+						<ul>
+							<li>
+								<h1>Join</h1>
+								<ul>
+									<li>
+										<a href="https://chat.whatsapp.com/ITkoA3AjfLZJ3lPsSnEbFg"><img src="images/waf.jpg" alt="" width="60px" height="36px"></a>
+										<a href="https://chat.whatsapp.com/ITkoA3AjfLZJ3lPsSnEbFg"><h2>WhatsApp</h2></a>
+										<!-- <span>FEBRUARY 3, 2023</span> -->
+									</li>
+									<li>
+										<a href="http://t.me/LTTupdates"><img src="images/tele.jpg" alt="" height="54px"></a>
+										<a href="https://chat.whatsapp.com/ITkoA3AjfLZJ3lPsSnEbFg"><h2>Telegram</h2></a>
+										<!-- <span>FEBRUARY 1, 2023</span> -->
+									</li>
+								</ul>
+							</li>
+							<li>
+								<!-- <h1>FEATURED POSTS</h1> -->
+								<!-- <a href="singlepost.html"><img src="images/moon-satellite.jpg" alt=""></a>
+								<h2>SOYUZ TMA-M</h2>
+								<span>FEBRUARY 6, 2023</span> -->
+								<div class="pod">
+								<video width="340" height="240" controls>
+						<source src="images/3.mp4" type="video/mp4">
+						<source src="images/3.ogg" type="video/ogg">
+					  Your browser does not support the video tag.
+					</video>
+					</div>
+				</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
