--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<!-- </ul> -->
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="blog.html">About</a>
 						<!-- <ul class="secondary"> -->
 							<!-- <li> -->
 								<!-- <a href="singlepost.html">Single post</a> -->
@@ -97,6 +97,17 @@
 					</ul>
 				</div>
 			</div>
+			<!-- <div class="body">
+				<div>
+					<h1>OUR MISSION</h1>
+					<p>Our aim is to maintain continuity among college students who are passionate and ambitious for learning</p> -->
+					<!-- <video width="600" height="240" controls> -->
+						<!-- <source src="images/1.mp4" type="video/mp4"> -->
+						<!-- <source src="images/1.ogg" type="video/ogg"> -->
+					  <!-- Your browser does not support the video tag. -->
+					<!-- </video> -->
+				<!-- </div> -->
+			<!-- </div> -->
 		</div>
 		<div id="footer">
 			<div class="connect">
