--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 						</ul> -->
 					</li>
 					<li class="menu">
-						<a href="blog.html">Blog</a>
+						<a href="blog.html">About</a>
 						<!-- <ul class="secondary">
 							<li>
 								<a href="singlepost.html">Single post</a>
@@ -49,7 +49,7 @@
 					<h1>Conducted Workshops</h1>
 					<ul>
 						<li>
-							<a href="proj1.html"><img src="images/ML.jpg" alt="" height=200px></a>
+							<a href="https://docs.google.com/document/d/1_aNFcLx2McfdapUwE0W2BdAfRRXlj4YuCqEJIcwihLs/edit"><img src="images/ML.jpg" alt="" height=200px></a>
 							<div>
 								<h1>C++ - Basic to Advance</h1>
 								<p>
@@ -59,23 +59,23 @@
 										<li>Master C++ in 15 days in May2021</li>
 									</ul>
 								</p>
-								<a href="proj1.html" class="more">Read More</a>
+								<a href="https://docs.google.com/document/d/1_aNFcLx2McfdapUwE0W2BdAfRRXlj4YuCqEJIcwihLs/edit" class="more">Read More</a>
 							</div>
 						</li>
 						<li>
-							<a href="proj1.html"><img src="images/dsa.jpg" alt="" height=225px></a>
+							<a href="https://docs.google.com/document/d/19EW2mv5QGnhTsHBwFhZnArsDAJIPd_EwvMPilTNKsP4/edit"><img src="images/dsa.jpg" alt="" height=225px></a>
 							<div>
 								<h1>Data Structures & Algorithms</h1>
 								<p>DSA Workshop was conducted from May2021-Jun2021.Students participating in this also got a chance to solve and explain DS questions in the class which helped them strengthen their concepts.</p>
-								<a href="proj1.html" class="more">Read More</a>
+								<a href="https://docs.google.com/document/d/19EW2mv5QGnhTsHBwFhZnArsDAJIPd_EwvMPilTNKsP4/edit" class="more">Read More</a>
 							</div>
 						</li>
 						<li>
-							<a href="proj1.html"><img src="images/ip.jpg" alt="" height=300px></a>
+							<a href="https://docs.google.com/document/d/1IQHZQKTbUhuZx3dFbg253lsH_1yZvH-hSv_QfwA_hKk/edit"><img src="images/ip.jpg" alt="" height=300px></a>
 							<div>
 								<h1>Interview Preparation to crack coding round of company</h1>
 								<p>A 45 days workshop was conducted from Jun2021-Aug2021 which prepared students for coding rounds to master DSA.</p>
-								<a href="proj1.html" class="more">Read More</a>
+								<a href="https://docs.google.com/document/d/1IQHZQKTbUhuZx3dFbg253lsH_1yZvH-hSv_QfwA_hKk/edit" class="more">Read More</a>
 							</div>
 						</li>
 					</ul>
@@ -85,6 +85,7 @@
 				<div>
 					<h1>Upcoming Workshops</h1>
 					<p class="sec">We will soon be launching other workshops too. Workshops for Python, Machine Learning, Data Science, OpenCV and many more so keep in touch for more details on our exciting workshops.Join our WhatsApp and Telegram groups and get added on our Mailing List for further news.</p>
+					<a href="https://docs.google.com/forms/d/13M06HNOkK8elk201UH5JWSkc0goBIwZyXmok-r5Dsgw/edit" class="more">Register</a>
 				</div>
 			</div>
 		</div>
